# cnn-implementation

./: README.md  cnn.ipynb  pyproject.toml
data/: README.md
