[project]
name = "cnn-implementation"
version = "0.1.0"
description = "figuring out CNNs"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "category-encoders>=2.9.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pydot>=4.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
